--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -14,6 +14,12 @@ find_package(GLEW REQUIRED)
 set(SOURCES
 	"src/main.cpp"
 	"src/utils.cpp"
+	"src/Renderer.cpp"
+	"src/IndexBuffer.cpp"
+	"src/VertexBuffer.cpp"
+	"src/block.cpp"
+	"src/chunk.cpp"
+	
 	"depends/imgui/imgui_impl_glfw.cpp"
 	"depends/imgui/imgui_impl_opengl3.cpp"
 	"depends/imgui/imgui.cpp"
