Added Camera closes #1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,14 @@ set(SOURCES
   "src/IndexBuffer.cpp"
   "src/VertexBuffer.cpp"
   "src/VertexArray.cpp"
-  "src/OrthographicCamera.cpp"
+  "src/Camera.cpp"
+  "src/CameraController.cpp"
   "src/Texture.cpp"
   "src/TextureCubeMap.cpp"
   "src/block.cpp"
   "src/chunk.cpp"
+  "src/Window.cpp"
+  "src/WindowsInput.cpp"
   "src/Material.cpp"
   
   "depends/imgui/imgui_impl_glfw.cpp"
