Added Perlin Noise for Terrain Generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,14 @@ set(TARGET ${CMAKE_PROJECT_NAME})
 set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+set(LIBNOISE_DIR ${PROJECT_SOURCE_DIR}/depends/noise)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(glm REQUIRED)
 find_package(GLEW REQUIRED)
+
+link_directories(${LIBNOISE_DIR})
 
 set(SOURCES
   "src/main.cpp"
@@ -28,7 +31,9 @@ set(SOURCES
   "src/Window.cpp"
   "src/WindowsInput.cpp"
   "src/Material.cpp"
-  
+
+
+  "depends/libnoise/noiseutils.cpp"
   "depends/imgui/imgui_impl_glfw.cpp"
   "depends/imgui/imgui_impl_opengl3.cpp"
   "depends/imgui/imgui.cpp"
@@ -42,8 +47,11 @@ add_executable(${TARGET} ${SOURCES})
 target_include_directories(${TARGET} PRIVATE
   ${PROJECT_SOURCE_DIR}/src
   ${PROJECT_SOURCE_DIR}/depends/imgui
+  ${PROJECT_SOURCE_DIR}/depends/libnoise
   ${GLFW_INCLUDE_DIRS}
   ${OPENGL_INCLUDE_DIR}
   ${GLM_INCLUDE_DIRS/../include}
 )
 target_link_libraries(${TARGET} ${OPENGL_LIBRARIES} glfw GLEW::GLEW)
+target_link_libraries(${TARGET} ${LIBNOISE_DIR} noise)
+target_link_libraries(${TARGET} ${LIBNOISE_DIR} noiseutils)
